--- a/static/coreSite/home.css
+++ b/static/coreSite/home.css
@@ -1,6 +1,7 @@
 #homeNav{
-  background-color: white;
+  background-color: transparent;
   border: 0;
+  color: white;
 }
 
 body, html {
@@ -9,7 +10,7 @@ body, html {
 
 .bg {
     /* The image used */
-    background-image: url("background.jpg");
+    background-image: url("background1.jpg");
 
     /* Full height */
     height: 100%;
@@ -18,21 +19,32 @@ body, html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
+}
+#abovePic{
+  
 }
 #homeFoot {
-  background-color: red;
+  background-color: transparent;
 
 }
-.loader {
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
+#cover {
+    background: url("loading.gif") no-repeat scroll center center #FFF;
+    position: absolute;
+    height: 100%;
+    width: 100%;
 }
-
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+#topText{
+  text-decoration: none;
+  color: white;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 1.5em;
 }
+#topText:hover{
+   border-bottom: 4px solid red;
+   transition: 0.4s;
+}
+#topText:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
